--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <tile>大家好</title>
 </head>
 <body>
-  <h1>我叫刘瑜</h1>
+  <p>我叫刘瑜</p>
+  </br>
+  <p>请在下面输入你想说的话</p></br>
+  <input type="text" name="something">
 </body>
 </html>
