--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <body>
   <p>我叫刘瑜</p>
   </br>
+  <form action="https://liu2868387941.github.io/" method="post">
   <p>请在下面输入你想说的话</p></br>
   <input type="text" name="something">
 </body>
