--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
   <p>我叫刘瑜</p>
   </br>
-  <form action="http://localhost:5000/" method="post">
+  <form action="http://0.0.0.0:5000/" method="post">
   <p>请在下面输入你想说的话</p></br>
   <input type="text" name="something">
 </body>
