--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <form action="http://0.0.0.0:5000/" method="post">
   <p>请在下面输入你想说的话</p></br>
   <input type="text" name="something">
+  <input type="submit" value="submit">
 </body>
 </html>
