--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
   <p>请在下面输入你想说的话</p></br>
   <input type="text" name="something">
   <input type="submit" value="submit">
+  </form>
 </body>
 </html>
