--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
   <input type="text" name="something">
   <input type="submit" value="submit">
   </form>
+  <a href="/finish">点击这里</a>
 </body>
 </html>
